--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://MohamedSamirEdris.github.io/SWC-Case-Study",
   "name": "weather-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
